--- a/src/main/resources/generator/generatorConfig.properties
+++ b/src/main/resources/generator/generatorConfig.properties
@@ -2,7 +2,7 @@
 jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/blog?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
 jdbc.username=root
-jdbc.password=19980525Ab!
+jdbc.password=19980525
 
 # 使用时候修改到自己的实体类
 entity.targetPackage=com.gudao.generator.model
