mysql中的漏洞版本升级

--- a/src/main/resources/generator/generatorConfig.properties
+++ b/src/main/resources/generator/generatorConfig.properties
@@ -1,8 +1,8 @@
 # jdbc settings
-jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/blog?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
+jdbc.driver=com.mysql.cj.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/wedding?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
 jdbc.username=root
-jdbc.password=19980525
+jdbc.password=123456
 
 # 使用时候修改到自己的实体类
 entity.targetPackage=com.gudao.generator.model
