--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,13 +3,13 @@ server.port=8080
 
 #Mybatis连接设置
 #数据库连接字符串
-spring.datasource.url=jdbc:mysql://localhost:3306/blog?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://localhost:3306/wedding?useUnicode=true&characterEncoding=UTF-8
 #驱动类型
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #账户
 spring.datasource.username=root
 #密码
-spring.datasource.password=19980525
+spring.datasource.password=123456
 #mapper映射文件包名
 mybatis.type-aliases-package=com.gudao.generator.dao
 #设置数据库映射实体类驼峰命名规范
